--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
   --secondary-text-color-theme-light: #757575;
   --primary-text-color-theme-dark: #ffffff;
   --secondary-text-color-theme-dark: rgba(255, 255, 255, 0.6);
+  --background-button: #f5f4fa;
+  --background-employees: #f5f4fa;
+  --logo-color: #000000;
+  --bacground-futter-hero: #2f303a;
 }
 .link {
   text-decoration: none;
@@ -23,6 +27,8 @@ button {
 body {
   font-family: var(--primary-font);
   color: var(--primary-text-color-theme-light);
+  background-color: var(--primary-text-color-theme-dark);
+  letter-spacing: 0.03em;
 }
 .visually-hidden {
   position: absolute;
@@ -36,22 +42,22 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
-
+.page-header .accent {
+  color: var(--accent-color);
+}
 .logo-header {
   font-family: --secondary-font;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  /* identical to box height */
-
-  letter-spacing: 0.03em;
-
-  color: #000000;
+  color: var(--logo-color);
 }
+
 .logo-header:hover,
 .logo-header:focus {
   color: var(--accent-color);
 }
+
 .menu-link {
   font-weight: 500;
   font-size: 14px;
@@ -71,58 +77,54 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
   color: var(--secondary-text-color-theme-light);
 }
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent-color);
 }
+.hero {
+  background-color: var(--bacground-futter-hero);
+}
 .main-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  /* or 136% */
-
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
-  /* color: var(--primary-text-color-theme-dark); */
+  color: var(--primary-text-color-theme-dark);
 }
 .modal-open-button {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  /* identical to box height, or 188% */
-
   display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-
-  /* color: var(--primary-text-color-theme-dark); */
+  background-color: var(--accent-color);
+  color: var(--primary-text-color-theme-dark);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 .modal-open-button:hover,
 .modal-open-button:focus {
-  background-color: var(--accent-color);
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   color: var(--primary-text-color-theme-dark);
 }
 .title-benefits-items {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .description-benefits-items {
-  /* font-weight: 400; */
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  /* or 171% */
-
-  letter-spacing: 0.03em;
-
   color: var(--secondary-text-color-theme-light);
 }
 .directions {
@@ -130,32 +132,32 @@ body {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.03em;
+}
+.employees {
+  background: var(--background-employees);
 }
 .title-employees {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.03em;
+}
+.employees-cards {
+  background-color: var(--primary-text-color-theme-dark);
 }
 .employees-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   /* identical to box height */
-  text-align: center;
-  letter-spacing: 0.03em;
+  /* text-align: center; */
 }
 .employees-position {
-  /* font-weight: 400; */
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   /* identical to box height */
-
-  text-align: center;
-  letter-spacing: 0.03em;
-
+  /* text-align: center; */
   color: var(--secondary-text-color-theme-light);
 }
 .logo-footer {
@@ -164,11 +166,13 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  /* identical to box height */
-
-  letter-spacing: 0.03em;
-
-  /* color: var(--primary-text-color-theme-dark); */
+  color: var(--primary-text-color-theme-dark);
+}
+.footer {
+  background-color: var(--bacground-futter-hero);
+}
+.footer .accent-footer {
+  color: var(--accent-color);
 }
 .logo-footer:hover,
 .logo-footer:focus {
@@ -179,11 +183,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  /* or 171% */
-
-  letter-spacing: 0.03em;
-
-  /* color: var(--primary-text-color-theme-dark); */
+  color: var(--primary-text-color-theme-dark);
 }
 .contact-list-link-address-footer:hover,
 .contact-list-link-address-footer:focus {
@@ -194,11 +194,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  /* or 171% */
-
-  letter-spacing: 0.03em;
-
-  /* color: var(--primary-text-color-theme-dark); */
+  color: var(--primary-text-color-theme-dark);
 }
 
 .contact-list-link-footer {
@@ -207,10 +203,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  /* or 171% */
-  letter-spacing: 0.03em;
-
-  /* color: var(--secondary-text-color-theme-dark); */
+  color: var(--secondary-text-color-theme-dark);
 }
 .contact-list-link-footer:hover,
 .contact-list-link-footer:focus {
@@ -220,9 +213,8 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
-  /* identical to box height, or 162% */
   text-align: center;
-  letter-spacing: 0.03em;
+  background-color: var(--background-button);
 }
 .filter-buttons:hover,
 .filter-buttons:focus {
@@ -233,16 +225,13 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  /* identical to box height, or 200% */
   letter-spacing: 0.06em;
+  color: var(--primary-text-color-theme-light);
 }
 .projects-type {
-  /* font-weight: 400; */
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
-  /* identical to box height, or 188% */
-
-  letter-spacing: 0.03em;
 
   color: var(--secondary-text-color-theme-light);
 }
